apps/sso/httproute-ldap.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ldap
  namespace: sso
spec:
  hostnames:
    - ldap.${GATEWAY_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ldap
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
